--- a/putaoteng1.css
+++ b/putaoteng1.css
@@ -6,7 +6,7 @@ body{
     background-color: #68cdd5;
 }
 .zuojiantou{
-    width: 4rem;
+    width: 3rem;
     margin-left: 1rem;
     margin-top: 1rem;
 }
@@ -14,21 +14,22 @@ body{
     text-align: center;
     margin-top: 3rem;
 }
+.logo{
+    width: 10em;
+}
 .word{
-
     margin: 12vw auto;
-    width:75%;
-    font-size: 2.6em;
-    letter-spacing:4px;
-    line-height: 4rem;
+    width:80%;
     color:#fff;
 }
 .zuotu{
+    width: 4rem;
     float: left;
     margin-left: 15vw;
     margin-top: 8vw;
 }
 .youtu{
+    width: 4rem;
     float: right;
     margin-right: 15vw;
     margin-top: 8vw;
